data/reddit/pokemastertt.txt
@_author: pokemastertt
@_date: 2014-07-23 06:59:13
@_date: 2014-10-16 17:05:10
In live in Europe and bank charges for ATM use, because they don't have their own. On the other hand pretty much everything is free, while you often have to pay for bitcoin transactions.
@_date: 2013-04-10 05:20:09
Never use online wallet.
@_date: 2013-04-05 20:40:55
So I should sell now?
@_date: 2013-04-05 20:42:10
How did credit cards work in the 70s?
@_date: 2013-04-03 10:50:51
Czech Republic.
@_date: 2013-04-10 13:15:39
Yeah. I forgot one has to use tabs in python.
@_date: 2013-04-10 07:10:36
Send them to me, I will cash them out, then pay $750 for return ticket to my country and I will give you the cash.
@_date: 2013-04-10 20:12:33
I invested my whole PS Vita savings.
@_date: 2013-05-20 22:08:34
Where can I buy some shares?
@_date: 2013-04-10 20:04:10
I didn't sell.
@_date: 2013-04-05 20:47:22
@_date: 2013-06-09 21:27:11
People still use checks? Interesting, here all wages are paid either in cash or to bank accounts.
@_date: 2013-04-11 16:57:23
I didn't sell because I am stupid.
@_date: 2013-12-18 23:18:22
@_date: 2013-05-16 15:20:45
You can even deposit onto pokerstars using bitcoin.
@_date: 2013-11-17 01:20:37
I posted it back when I added bitcoin support and only got downvotes/insults, because my business is not that morally correct.
@_date: 2013-04-26 19:24:43
Fucking Germans.
@_date: 2013-04-13 16:36:44
How do I disable java in Opera? I need Java on my PC for school.
@_date: 2013-06-12 22:39:58
@_date: 2013-10-04 23:29:19
Any other way to contact him other than the forum that's down right now?
@_date: 2013-05-15 22:06:26
How do I invest?
@_date: 2013-04-09 22:43:22
You have to pay taxes from it? Do you have to pay taxes from online poker winning in the USA?
@_date: 2013-04-09 22:40:49
Wouldn't it be small instead?
@_date: 2013-04-28 15:41:16
And moved where?
@_date: 2013-06-12 22:11:49
Find out I need at least 2.5 BTC to buy shares :(
@_date: 2013-04-10 22:00:03
Send money using bank transfer, so hard?
@_date: 2013-04-10 14:49:35
You can generate a new wallet offline?
@_date: 2013-04-10 11:57:20
Really? At least on the auction site in my country it rarely happens. If you fail to pay for 3 auctions you get banned and you need verification to register.
@_date: 2013-04-10 12:10:33
I get this error:  
proxies = {"http": proxy}
          ^
IndentationError: expected an indented block
@_date: 2013-04-10 13:52:57
Now I get this error:
@_date: 2013-12-19 01:15:02
1% Transaction Fees on bitpay. I will simply ask for the customer to use the rate I use.